tests/paczka1/small_fuzzy/65914438.err
Error in line 1: 9pYdBL1K7Qp S536 7=,6
Error in line 7: 9pYdBL1K7Qp A104 10,17
Error in line 2: 9pYdBL1K7Qp S536 368,6
Error in line 9: aQEvPN S536 34,9
